More responsive so it'll look better if embedded.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <html>
 	<span id="barsaive">
-		<img src="https://cdn.discordapp.com/attachments/350435290139066389/379320790165880842/map11-12-17b.png" usemap="#locations"/>
+		<img src="https://cdn.discordapp.com/attachments/350435290139066389/379320790165880842/map11-12-17b.png" usemap="#locations" style="width: 100%;height: auto;"/>
 		<map name="locations">
 		</map>
 	</span>
