--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>;
+<head>
     <link rel="stylesheet" type="text/css" href="tooltipster/dist/css/tooltipster.bundle.min.css" />
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
